# agent-zero

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT_2026-02-18.md  BROCULA_AUDIT_REPORT.md  CODEOWNERS  CONTRIBUTING.md  DockerfileLocal  Makefile  README.md  SECURITY.md  agent.py  bandit-report.json  check_dependencies.py  chromewebdata_2026-02-15_16-47-59.report.html  eslint.config.js  health_check.py  initialize.py  models.py  notes.md  on-push-optimized.yml  package.json  preload.py  prepare.py  pyproject.toml  pytest.ini  requirements-base.txt  requirements-linux.txt  requirements-macos.txt  requirements-windows.txt  requirements.dev.txt  requirements.txt  run_tunnel.py  run_ui.py  setup.cfg  task_plan.md  task_plan_flexy.md  test_async_fixes.py  (+14 more)
.github/: GITHUB_ACTIONS_OPTIMIZATION.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: P0_test_coverage.md  P0_type_safety.md  P1_refactor_large_modules.md  P1_security_ssh.md  P1_structured_logging.md  P2_ci_automation.md
.github/prompt/: 00-strategist.md  01-code-review.md  02-docs-hygiene.md  03-test-coverage.md  11-main.md  README.md
.github/workflows/: brocula-monitor.yml  iterate.yml  oc- researcher.yml  oc-cf-supabase.yml  oc-issue-solver.yml  oc-maintainer.yml  oc-pr-handler.yml  oc-problem-finder.yml  on-pull-optimized.yml  on-push-optimized.yml  parallel.yml
.opencode/: README.md  oh-my-opencode.json  opencode.json
.opencode/agent-skill/: README.md  github-workflow-automation.skill
.opencode/skills/: github-workflow-automation  planning  skill-creator
.opencode/tools/: analyze-api-endpoints  analyze-python-helpers  check-settings-todos  find-large-functions
.sisyphus/: ralph-loop.local.md
agents/: AGENTS.md
agents/brocula/: README.md  brocula.py  brocula_loop.py  mcp-servers.json
conf/: model_providers.yaml
docker/base/: Dockerfile
docker/run/: Dockerfile  docker-compose.yml
docs/: DEVELOPMENT_TASKS.md  DX-engineer.md  Growth-Innovation-Strategist.md  Product-Architect.md  README.md  REPOSITORY_ANALYSIS.md  REPO_CLEANUP_AUDIT_2026-02-13.md  ROADMAP.md  RnD.md  SECURITY.md  SECURITY_ANALYSIS.md  TECHNICAL_DEBT.md  a2a_protocol.md  ai-agent-engineer.md  api.md  architecture.md  backend-engineer.md  blueprint.md  configuration-guide.md  configuration.md  connectivity.md  contribution.md  development.md  extensibility.md  frontend-engineer.md  installation.md  mcp_setup.md  modular-configuration-analysis.md  notifications.md  performance-audit-2026-02-16.md  platform-engineer.md  quality-assurance.md  quickstart.md  safe_expression_filtering.md  security-engineer.md  task.md  technical-writer.md  testing.md  troubleshooting.md  tunnel.md  (+3 more)
docs/archive/: AUDIT_REPORT_2026-02-12.md  REPO_CLEANUP_AUDIT_2026-02-13.md  REPO_CLEANUP_AUDIT_2026-02-14.md  REPO_CLEANUP_AUDIT_2026-02-16.md
docs/designs/: backup-specification-backend.md  backup-specification-frontend.md
docs/prompts/: README.md
docs/setup/: vps-deployment.md
hooks/ai_review/: README.md  ai_review_config.yaml  ai_review_hook.py
lib/browser/: init_override.js
prompts/: AGENTS.md  agent.system.main.role.md  agent.system.tool.call_sub.py  agent.system.tool.code_exe.md  agent.system.tool.wait.md  agent.system.tools.py  fw.code.info.md  fw.document_query.optmimize_query.md  fw.mcp_tools_usage.md  mcp.tool_usage.md  memory.consolidation.msg.md  memory.memories_sum.sys.md
python/api/: AGENTS.md  api_files_get.py  api_log_get.py  api_message.py  api_reset_chat.py  api_terminate_chat.py  backup_create.py  backup_get_defaults.py  backup_inspect.py  backup_preview_grouped.py  backup_restore.py  backup_restore_preview.py  backup_test.py  chat_create.py  chat_export.py  chat_files_path_get.py  chat_load.py  chat_remove.py  chat_reset.py  config_validation.py  csrf_token.py  ctx_window_get.py  delete_work_dir_file.py  download_work_dir_file.py  file_info.py  get_work_dir_files.py  health.py  history_get.py  image_get.py  import_knowledge.py  knowledge_path_get.py  knowledge_reindex.py  mcp_server_get_detail.py  mcp_server_get_log.py  mcp_servers_apply.py  mcp_servers_status.py  memory_dashboard.py  message.py  message_async.py  notification_create.py  (+24 more)
python/coordinators/: __init__.py  history_coordinator.py  stream_coordinator.py  tool_coordinator.py
python/extensions/: AGENTS.md
python/helpers/: AGENTS.md  __init__.py  api.py  attachment_manager.py  backup.py  browser_use.py  browser_use_monkeypatch.py  call_llm.py  command_validator.py  config.py  config_manager.py  config_validator.py  constants.py  context.py  crypto.py  defer.py  dependency_check.py  dependency_checker.py  dirty_json.py  docker.py  document_query.py  dotenv.py  duckduckgo_search.py  email_client.py  errors.py  extension.py  extract_tools.py  faiss_monkey_patch.py  fasta2a_client.py  fasta2a_server.py  file_browser.py  file_tree.py  files.py  git.py  graceful_degradation.py  guids.py  health_check.py  history.py  images.py  job_loop.py  (+51 more)
python/tools/: AGENTS.md  (+21 more)
scripts/: check_dependencies.py  verify_dependencies.py
tests/: TOOL_COORDINATOR_TESTS.md  chunk_parser_test.py  conftest.py  email_parser_test.py  rate_limiter_manual.py  rate_limiter_test.py  test_attachment_manager.py  test_backup.py  test_basic.py  test_browser_use_monkeypatch.py  test_call_llm.py  test_command_execution_security.py  test_config.py  test_config_manager.py  test_config_validator.py  test_constants.py  test_context.py  test_crypto.py  test_defer.py  test_dirty_json.py  test_dotenv.py  test_duckduckgo_search.py  test_errors.py  test_extension.py  test_extract_tools.py  test_fasta2a_client.py  test_file_tree_visualize.py  test_files.py  test_git.py  test_guids.py  test_health_check.py  test_history_vision.py  test_images.py  test_job_loop.py  test_knowledge_import.py  test_localization.py  test_log.py  test_login.py  test_mcp_handler.py  test_memory_leak_fixes.py  (+33 more)
webui/: .prettierignore  AGENTS.md  eslint.config.js  index.css  index.html  index.js  index.min.css  index.min.js  login.css  login.html  login.min.css  package.json
(+274 files in other folders)
