[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-zero"
version = "0.9.7"
description = "A personal, organic agentic framework that grows and learns with you"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Agent Zero Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "flask>=3.0.0",
    "litellm>=1.0.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
    "types-pyyaml",
    "types-requests",
    "types-pytz",
    "types-paramiko",
]

[project.urls]
Homepage = "https://agent-zero.ai"
Documentation = "https://github.com/agent0ai/agent-zero/tree/main/docs"
Repository = "https://github.com/agent0ai/agent-zero"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "T20", # flake8-print (catch print statements)
    "TRY", # tryceratops (exception handling)
    "PERF",# perflint
    "RUF", # ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D205",  # 1 blank line required between summary line and description
    "D212",  # Multi-line docstring summary should start at the first line
    "D417",  # Missing argument description in docstring
    "E501",  # Line too long (handled by formatter)
    "TRY002",# Create your own exception
    "TRY003",# Avoid specifying long messages outside the exception class
    "TRY004",# Prefer TypeError exception for invalid type
    "TRY203",# Remove exception handler; error is immediately re-raised
    "TRY300",# Consider moving this statement to an else block
    "TRY301",# Abstract raise to an inner function
    "B007",  # Loop control variable not used
    "B008",  # Do not perform function call in argument defaults
    "B024",  # Abstract base class with no abstract methods
    "B904",  # raise exceptions with raise from
    "PERF401",# Use list comprehension
    "PERF402",# Use list or list.copy
    "SIM102",# Use a single if statement
    "SIM105",# Use contextlib.suppress
    "SIM108",# Use ternary operator
    "SIM113",# Use enumerate()
    "SIM115",# Use context manager for opening files
    "N802",  # Function name should be lowercase
    "N806",  # Variable in function should be lowercase
    "N818",  # Exception name should be named with an Error suffix
    "UP007", # Use X | Y for type annotations
    "RUF001",# String contains ambiguous unicode character
    "RUF002",# Docstring contains ambiguous unicode character
    "RUF003",# Comment contains ambiguous unicode character
    "RUF006",# Store reference to asyncio.create_task
    "RUF012",# Mutable default value for class attribute
    "F841",  # Unused variable (intentionally unused in exception handlers)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S"]
"python/helpers/settings.py" = ["C901"]  # Too complex - known issue
"python/helpers/task_scheduler.py" = ["C901"]  # Too complex - known issue
"python/helpers/mcp_handler.py" = ["C901"]  # Too complex - known issue

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | webui/vendor
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = false
warn_redundant_casts = false
warn_unused_ignores = false
strict_optional = false
implicit_optional = true
disable_error_code = [
    "assignment",
    "var-annotated",
    "union-attr",
    "type-abstract",
    "syntax",
    "return",
    "literal-required",
    "typeddict-item",
    "arg-type",
    "abstract",
    "misc",
    "return-value",
    "attr-defined",
    "func-returns-value",
]
exclude = [
    "webui/",
    "tests/",
    "venv/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "litellm.*",
]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["python"]
omit = [
    "*/tests/*",
    "*/test_*",
    "webui/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
