[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["python*", "agents*"]
exclude = [
    "usr",
    "lib",
    "conf",
    "webui",
    "docker",
    "memory",
    "prompts",
    "knowledge",
    "instruments",
    "tests",
    "docs",
]

[project]
name = "agent-zero"
version = "0.9.7"
description = "A personal, organic agentic framework that grows and learns with you"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Agent Zero Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "flask[async]>=3.0.0",
    "flask-basicauth>=0.2.0",
    "flask-compress>=1.17",
    "brotli>=1.1.0",
    "litellm>=1.0.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "a2wsgi>=1.10.0",
    "ansio>=0.0.1",
    "browser-use>=0.5.0",
    "docker>=7.0.0",
    "duckduckgo-search>=6.0.0",
    "fastmcp>=2.14.0",
    "fasta2a>=0.5.0",
    "flaredantic>=0.1.0",
    "GitPython>=3.1.0",
    "inputimeout>=1.0.0",
    "kokoro>=0.9.0",
    "simpleeval>=1.0.0",
    "langchain-core>=0.3.81",
    "langchain-community>=0.3.27",
    "langchain-text-splitters>=0.3.9",
    "langchain-classic>=1.0.1",
    "langchain-unstructured[all-docs]>=0.1.6",
    "openai-whisper>=20240930",
    "lxml_html_clean>=0.4.0",
    "markdown>=3.7",
    "mcp>=1.23.0",
    "newspaper3k>=0.2.8",
    "paramiko>=3.5.0",
    "playwright>=1.50.0",
    "pypdf>=6.4.0",
    "pytz>=2024.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.8.0",
    "unstructured[all-docs]>=0.16.0",
    "unstructured-client>=0.31.0",
    "webcolors>=24.0.0",
    "nest-asyncio>=1.6.0",
    "crontab>=1.0.0",
    "markdownify>=1.1.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.25.0",
    "pytesseract>=0.3.0",
    "pdf2image>=1.17.0",
    "pathspec>=0.12.0",
    "psutil>=7.0.0",
    "soundfile>=0.13.0",
    "imapclient>=3.0.0",
    "html2text>=2024.0.0",
    "beautifulsoup4>=4.12.0",
    "exchangelib>=5.4.0",
    "httpx>=0.27.0",
    "pywinpty>=3.0.2; sys_platform == 'win32'",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.8.0",
    "pre-commit>=3.5.0",
    "pytest-asyncio>=0.21.0",
    "types-pyyaml",
    "types-requests",
    "types-pytz",
    "types-paramiko",
]

[project.urls]
Homepage = "https://agent-zero.ai"
Documentation = "https://github.com/agent0ai/agent-zero/tree/main/docs"
Repository = "https://github.com/agent0ai/agent-zero"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "T20", # flake8-print (catch print statements)
    "TRY", # tryceratops (exception handling)
    "PERF",# perflint
    "RUF", # ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D205",  # 1 blank line required between summary line and description
    "D212",  # Multi-line docstring summary should start at the first line
    "D417",  # Missing argument description in docstring
    "E501",  # Line too long (handled by formatter)
    "TRY002",# Create your own exception
    "TRY003",# Avoid specifying long messages outside the exception class
    "TRY004",# Prefer TypeError exception for invalid type

    "TRY300",# Consider moving this statement to an else block
    "TRY301",# Abstract raise to an inner function
    "B007",  # Loop control variable not used
    "B008",  # Do not perform function call in argument defaults
    "B024",  # Abstract base class with no abstract methods
    "B904",  # raise exceptions with raise from
    "PERF401",# Use list comprehension
    "PERF402",# Use list or list.copy
    "SIM102",# Use a single if statement
    "SIM105",# Use contextlib.suppress
    "SIM108",# Use ternary operator
    "SIM113",# Use enumerate()
    "SIM115",# Use context manager for opening files
    "N802",  # Function name should be lowercase
    "N806",  # Variable in function should be lowercase
    "N818",  # Exception name should be named with an Error suffix
    "UP007", # Use X | Y for type annotations
    "RUF001",# String contains ambiguous unicode character
    "RUF002",# Docstring contains ambiguous unicode character
    "RUF003",# Comment contains ambiguous unicode character
    "RUF006",# Store reference to asyncio.create_task
    "RUF012",# Mutable default value for class attribute
    "F841",  # Unused variable (intentionally unused in exception handlers)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S"]
"python/helpers/settings.py" = ["C901"]  # Too complex - known issue
"python/helpers/task_scheduler.py" = ["C901"]  # Too complex - known issue
"python/helpers/mcp_handler.py" = ["C901"]  # Too complex - known issue

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = false
warn_redundant_casts = false
warn_unused_ignores = false
strict_optional = false
implicit_optional = true
disable_error_code = [
    "assignment",
    "var-annotated",
    "union-attr",
    "type-abstract",
    "syntax",
    "return",
    "literal-required",
    "typeddict-item",
    "arg-type",
    "abstract",
    "misc",
    "return-value",
    "attr-defined",
    "func-returns-value",
]
exclude = [
    "webui/",
    "tests/",
    "venv/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "litellm.*",
]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["python"]
omit = [
    "*/tests/*",
    "*/test_*",
    "webui/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
